# crew-deploy

./: .gitignore  pyproject.toml
src/spinscribe/: crew.py  main.py
src/spinscribe/config/: agents.yaml  tasks.yaml
src/spinscribe/tools/: __init__.py  custom_tool.py
src/spinscribe/webhooks/: handlers.py  models.py  server.py  storage.py
src/spinscribe/webhooks/templates/: dashboard.html
